# Investment

./: pyproject.toml
memo/: 20250316_memo.md  20250316_【トランプ2.0が呼んだヨーロッパ覚醒】ドイツ株最高値へ_糸島孝俊 × 岡崎良介.md  20250316_【迷走する米株のゆくえ】トランプ砲 乱れ打ち？その真意を読み解く_野中 靖 × 田中 泰輔.md  20250316_田中泰輔のマネーは語る：【米国株】ここからの勝算。リスクオフと（まだ）言う勿れ（田中 泰輔）【楽天証券 トウシル】.md
memo/20250320/: 2025320_memo.md
memo/20250326/: memo.md  関税について.md
memo/20250331/: memo.md
memo/20250501/: memo.md
memo/20250504/: memo.md
memo/20250508/: memo.md
memo/20250519/: memo.md
memo/20250526/: memo.md
memo20250326/: memo.md
src/: Untitled-1.ipynb  Untitled-2.ipynb  Untitled.ipynb
ticker/: sample.txt
ticker/277A_グロービング/: 20250406_memo.md
ticker/5248_テクノロジーズ/: memo.md
