[tool.poetry]
name = "investment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
pandas = "^2.2.3"
numpy = "1.26.0"
yfinance = "^0.2.55"
matplotlib = "3.9"
seaborn = "^0.13.2"
mplfinance = "^0.12.10b0"
japanize-matplotlib = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
